# serpytor

./: .coverage  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: apisec-scan.yml  codacy.yml  codeql.yml  sonarcloud.yml
docs/: manual.md  search.js  serpytor.html
docs/serpytor/: aggregator.html  analytics.html  automl.html  components.html  config.html  connection.html  dashboard.html  events.html  examples.html  exports.html  feature_store.html  framework.html  logging.html  models.html  pipelines.html  registry.html  resolver.html  services.html
docs/serpytor/analytics/: decorators.html
docs/serpytor/components/: analytics.html  automl.html  connection.html  dashboard.html  events.html  exports.html  models.html  (+9 more)
serpytor/: __init__.py  config.py  config.yaml
serpytor/analytics/: __init__.py  decorators.py
serpytor/automl/: __init__.py  automl.py
serpytor/components/: __init__.py
serpytor/database/: db.py
serpytor/events/: __init__.py  event_capture.py
serpytor/examples/: __init__.py  data_pipeline.md  distributed_data_pipeline.md
serpytor/feature_store/: __init__.py  config.py  feature_stores.py  tests.py
serpytor/logging/: decorators.py  exceptions.py  logging.py
serpytor/pipelines/: __init__.py  exceptions.py  pipelines.py
serpytor/registry/: registry.py  utils.py
serpytor/template/: template_config.py
serpytor/tests/: test_e2e.py  test_event_capture.py  test_pipeline.py  test_resolution.py
tests/: test_all.py  test_e2e.py  test_event_capture.py  test_pipeline.py  test_resolution.py
(+89 files in other folders)
